<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:id="@+id/product_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_product_button"
        android:padding="16dp" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        app:layout_constraintBottom_toTopOf="@id/delete_product_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/delete_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
